--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <title>EShopper - Inicio</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <!-- <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description"> -->
+    <meta name="keywords" content="tienda online, comprar en línea, ecommerce, moda, ropa, accesorios, hogar, descuentos, ofertas">
+    <meta name="description" content="Bienvenido a nuestra tienda online. Descubre las mejores ofertas en moda, ropa, accesorios y más productos. ¡Compra en línea y disfruta de descuentos exclusivos!">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -64,7 +65,7 @@
                     <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
                 </a>
             </div>
-            <div class="col-lg-6 col-6 text-left">
+            <!-- <div class="col-lg-6 col-6 text-left">
                 <form action="">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Buscar Productos">
@@ -75,7 +76,7 @@
                         </div>
                     </div>
                 </form>
-            </div>
+            </div> -->
             <div class="col-lg-3 col-6 text-right">
                 <!-- <a href="" class="btn border">
                     <i class="fas fa-heart text-primary"></i>
