--- a/shop.html
+++ b/shop.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <title>EShopper - Productos</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <!-- <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description"> -->
+    <meta name="keywords" content="tienda online, comprar en línea, ecommerce, moda, ropa, accesorios, hogar, descuentos, ofertas">
+    <meta name="description" content="Bienvenido a nuestra tienda online. Descubre las mejores ofertas en moda, ropa, accesorios y más productos. ¡Compra en línea y disfruta de descuentos exclusivos!">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -64,7 +65,7 @@
                     <h1 class="m-0 display-5 font-weight-semi-bold"><span class="text-primary font-weight-bold border px-3 mr-1">E</span>Shopper</h1>
                 </a>
             </div>
-            <div class="col-lg-6 col-6 text-left">
+            <!-- <div class="col-lg-6 col-6 text-left">
                 <form action="">
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Buscar Productos">
@@ -75,7 +76,7 @@
                         </div>
                     </div>
                 </form>
-            </div>
+            </div> -->
             <div class="col-lg-3 col-6 text-right">
                 <!-- <a href="" class="btn border">
                     <i class="fas fa-heart text-primary"></i>
@@ -223,27 +224,27 @@
                         </div>
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                             <input type="checkbox" class="custom-control-input" id="color-1">
-                            <label class="custom-control-label" for="color-1">Black</label>
+                            <label class="custom-control-label" for="color-1">Negro</label>
                             <span class="badge border font-weight-normal">150</span>
                         </div>
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                             <input type="checkbox" class="custom-control-input" id="color-2">
-                            <label class="custom-control-label" for="color-2">White</label>
+                            <label class="custom-control-label" for="color-2">Blanco</label>
                             <span class="badge border font-weight-normal">295</span>
                         </div>
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                             <input type="checkbox" class="custom-control-input" id="color-3">
-                            <label class="custom-control-label" for="color-3">Red</label>
+                            <label class="custom-control-label" for="color-3">Rojo</label>
                             <span class="badge border font-weight-normal">246</span>
                         </div>
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between mb-3">
                             <input type="checkbox" class="custom-control-input" id="color-4">
-                            <label class="custom-control-label" for="color-4">Blue</label>
+                            <label class="custom-control-label" for="color-4">Azul</label>
                             <span class="badge border font-weight-normal">145</span>
                         </div>
                         <div class="custom-control custom-checkbox d-flex align-items-center justify-content-between">
                             <input type="checkbox" class="custom-control-input" id="color-5">
-                            <label class="custom-control-label" for="color-5">Green</label>
+                            <label class="custom-control-label" for="color-5">Verde</label>
                             <span class="badge border font-weight-normal">168</span>
                         </div>
                     </form>
@@ -331,7 +332,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div>
@@ -347,7 +348,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div>  
@@ -363,7 +364,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div>  
@@ -379,7 +380,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div> 
@@ -395,7 +396,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div>  
@@ -411,7 +412,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div>  
@@ -427,7 +428,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div>  
@@ -443,7 +444,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div>  
@@ -459,7 +460,7 @@
                                 </div>
                             </div>
                             <div class="card-footer d-flex justify-content-center bg-light border">
-                                <a href="" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
+                                <a href="detail.html" class="btn btn-sm text-dark p-0"><i class="fas fa-eye text-primary mr-1"></i>Detalles</a>                                
                             </div>
                         </div>
                     </div> 
